Check license information for relative URLs (#1117)